# ufs-eye-monitor-android

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/qualcomm/eyemonitorinterface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_wrapper_lsufs.c  jni_wrapper_ufseom.c  json.c  lsufs.c  ufs_eom.c
app/src/main/java/com/qualcomm/eyemonitorinterface/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qualcomm/eyemonitorinterface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
